# glr

./: .gitmodules  CMakeLists.txt  README.md
Include/glad/: glad.h
src/: glad.c  glr_camera.c  glr_camera.h  glr_core.c  glr_core.h  glr_mesh.c  glr_mesh.h  glr_shdr.c  glr_shdr.h  glr_texture.c  glr_texture.h  glr_types.h  glr_utils.h  glr_vertex_data.h  main.c
src/glsl/: 3p2t.frag  3p2t.vert  3p2t_mvp.frag  3p2t_mvp.vert  3p3n2t_mvp_phong.frag  3p3n2t_mvp_phong.vert  3p_mvp.frag  3p_mvp.vert  3p_mvp_terrain.frag  3p_mvp_terrain.vert  skybox.frag  skybox.vert  test.frag  test.vert
